# cc-pet

./: .gitignore  README.md  index.html  package-lock.json  package.json  start-dev.ps1  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/rules/: version-sync.mdc
.github/workflows/: build.yml  ci.yml
docs/superpowers/plans/: 2026-03-28-test-coverage-implementation.md
docs/superpowers/specs/: 2026-03-28-test-coverage-design.md
scripts/: gen_app_icon_png.py
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  config.rs  history.rs  lib.rs  link_preview.rs  llm.rs  main.rs  tunnel.rs  update.rs
src-tauri/tests/: diagnose.rs  inspect_real_db.rs  session_persistence.rs
src-tauri/windows/: hooks.nsi
src/components/: ChatWindow.test.tsx  ChatWindow.tsx  Pet.test.tsx  Pet.tsx  SessionDropdown.tsx  Settings.test.tsx  Settings.tsx  SlashCommandMenu.tsx  UpdateNotice.tsx
src/hooks/: useAutoUpdateCheck.ts  useTauriEvents.ts
src/lib/: commands.test.ts  commands.ts  manualUpdateCheck.ts  sessionRouting.test.ts  sessionStorage.ts  smoke.test.ts  store.test.ts  store.ts  types.ts
src/styles/: globals.css
