[package]
name = "cc-pet"
version = "0.5.2"
edition = "2021"
description = "Desktop pet connecting to cc-connect via Bridge WebSocket"
license = "MIT"

[lib]
name = "cc_pet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
toml = "0.8"
rusqlite = { version = "0.34", features = ["bundled"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"] }
log = "0.4"
chrono = "0.4"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSColor", "NSWindow", "NSResponder"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
